--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ahsan-labs",
-  "homepage": "",
+  "homepage": "https://syedafatimahmad.github.io/ahsan-labs/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
