--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.6",
+    "sweetalert2": "^11.26.4",
     "three": "^0.181.2",
     "three-stdlib": "^2.36.1"
   },
